--- a/index.html
+++ b/index.html
@@ -125,35 +125,35 @@
             <div class="quotes-container">
 <div class="quotes-slider">
 
-<div class="quote-slide active"><div class="quote-card"><div class="quote-text">“நான் எந்தப் பொறியியல் கல்லூரியிலும் படிக்கவில்லை; என்னையே நான் பொறியாளனாக உருவாக்கிக் கொண்டேன்.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide active"><div class="quote-card"><div class="quote-text">“நான் எந்தப் பொறியியல் கல்லூரியிலும் படிக்கவில்லை; என்னையே நான் பொறியாளனாக உருவாக்கிக் கொண்டேன்.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“வெளிநாடுகளை நம்பி இருப்பது நம்மை முன்னேற்றாது. இந்தியர்களே தங்களுக்கான இயந்திரங்களை உருவாக்க வேண்டும்.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“வெளிநாடுகளை நம்பி இருப்பது நம்மை முன்னேற்றாது. இந்தியர்களே தங்களுக்கான இயந்திரங்களை உருவாக்க வேண்டும்.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“பாடசாலையில் கற்றதுதான் கல்வி அல்ல; முயற்சியும் ஆர்வமும் தான் உண்மையான கல்வி.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“பாடசாலையில் கற்றதுதான் கல்வி அல்ல; முயற்சியும் ஆர்வமும் தான் உண்மையான கல்வி.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“ஒவ்வொரு தோல்வியும் என்னை ஒரு புதிய கண்டுபிடிப்பின் பாதைக்கு அழைத்துச் சென்றது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“ஒவ்வொரு தோல்வியும் என்னை ஒரு புதிய கண்டுபிடிப்பின் பாதைக்கு அழைத்துச் சென்றது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“சாதாரண மனிதனின் வாழ்க்கையை மேம்படுத்தாத இயந்திரம் பயனற்றது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“சாதாரண மனிதனின் வாழ்க்கையை மேம்படுத்தாத இயந்திரம் பயனற்றது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இந்தியர்களின் அறிவாற்றல் உலகின் எந்த நாட்டினரையும் விடக் குறைவானது அல்ல.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இந்தியர்களின் அறிவாற்றல் உலகின் எந்த நாட்டினரையும் விடக் குறைவானது அல்ல.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“தொழில்நுட்பத்தை இறக்குமதி செய்வது நாட்டை பலவீனமாக்கும்; அதை உருவாக்குவது நாட்டை வலுப்படுத்தும்.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“தொழில்நுட்பத்தை இறக்குமதி செய்வது நாட்டை பலவீனமாக்கும்; அதை உருவாக்குவது நாட்டை வலுப்படுத்தும்.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“திடமான மனப்பாங்கு இருந்தால் பட்டம் இல்லாமல்கூட ஒருவர் சிறந்த பொறியாளனாக முடியும்.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“திடமான மனப்பாங்கு இருந்தால் பட்டம் இல்லாமல்கூட ஒருவர் சிறந்த பொறியாளனாக முடியும்.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“புத்தகங்களை விட இயந்திரங்களைத் திறந்து ஆராய்ந்ததில்தான் நான் அதிகம் கற்றேன்.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“புத்தகங்களை விட இயந்திரங்களைத் திறந்து ஆராய்ந்ததில்தான் நான் அதிகம் கற்றேன்.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இந்தியாவின் எதிர்காலம் அதன் சொந்த இயந்திரங்களை உருவாக்குவதில்தான் உள்ளது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இந்தியாவின் எதிர்காலம் அதன் சொந்த இயந்திரங்களை உருவாக்குவதில்தான் உள்ளது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இயந்திரங்கள் சிலருக்கான ஆடம்பரம் ஆகக் கூடாது; பொதுமக்களின் பயன்பாட்டுக்காகவே உருவாக்கப்பட வேண்டும்.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இயந்திரங்கள் சிலருக்கான ஆடம்பரம் ஆகக் கூடாது; பொதுமக்களின் பயன்பாட்டுக்காகவே உருவாக்கப்பட வேண்டும்.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“நான் சந்தித்த ஒவ்வொரு பிரச்சினையும் எனக்கான புதிய பாடமாக மாறியது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“நான் சந்தித்த ஒவ்வொரு பிரச்சினையும் எனக்கான புதிய பாடமாக மாறியது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“அறிவு என்பது பெற்றுக் கொள்ளப்படுவது அல்ல; அது தேடிப் பெறப்படுவது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“அறிவு என்பது பெற்றுக் கொள்ளப்படுவது அல்ல; அது தேடிப் பெறப்படுவது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“தன்னம்பிக்கை இல்லாமல் எந்த கண்டுபிடிப்பும் உருவாகாது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“தன்னம்பிக்கை இல்லாமல் எந்த கண்டுபிடிப்பும் உருவாகாது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
-<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இந்த நாட்டின் வளர்ச்சி அதன் இளைஞர்களின் சிந்தனையில் தான் உள்ளது.”</div><div class="quote-author">– கி. டி. நாயுடு</div></div></div>
+<div class="quote-slide"><div class="quote-card"><div class="quote-text">“இந்த நாட்டின் வளர்ச்சி அதன் இளைஞர்களின் சிந்தனையில் தான் உள்ளது.”</div><div class="quote-author">– ஜி. டி. நாயுடு</div></div></div>
 
 
                 </div>
@@ -206,4 +206,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
